--- a/package.json
+++ b/package.json
@@ -10,14 +10,55 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@nyashanziramasanga/react-native-horizontal-scroll-menu": "^1.0.11",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.10.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-native": "^0.73.0",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.20",
+    "expo-av": "^15.0.1",
+    "expo-image-picker": "^16.0.3",
+    "expo-notifications": "^0.29.11",
     "expo-status-bar": "~2.0.0",
+    "formik": "^2.4.6",
+    "geolib": "^3.3.4",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "moment": "^2.30.1",
+    "native-base": "^3.4.28",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "^0.76.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.20.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-otp-entry": "^1.8.1",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-ratings": "^8.1.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.10.1",
+    "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-ui-datepicker": "^2.0.4",
+    "react-navigation": "^5.0.0",
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
     "@types/react": "~18.3.12",
+    "@types/react-native-snap-carousel": "^3.8.11",
+    "add": "^2.0.6",
     "typescript": "^5.3.3"
   },
   "private": true
