--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@nyashanziramasanga/react-native-horizontal-scroll-menu": "^1.0.11",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -36,16 +36,16 @@
     "react-native": "^0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-otp-entry": "^1.8.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "^5.0.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^15.10.1",
+    "react-native-svg": "15.8.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-ui-datepicker": "^2.0.4",
