--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nyashanziramasanga/react-native-horizontal-scroll-menu": "^1.0.11",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -35,7 +36,7 @@
     "react-native": "^0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.18.0",
+    "react-native-maps": "1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-otp-entry": "^1.8.1",
     "react-native-phone-number-input": "^2.1.0",
